test/semantic_errors/invalid_global_initialization.mc
int invalid = 10;
int global2 = 10 + 2 + invalid;

void main() {
    
}